edit  about data type and return body